# bgfx_sdl_template

./: .gitignore  README.md  basic-vert.bin.disasm  basic.frag  basic.vert  build.bat  compile_opengl_shaders.bat  compile_shaders.bat  compile_spirv_shaders.bat  duck.tga  main.cpp  meson.build
